--- a/ProductLandingPage/index.html
+++ b/ProductLandingPage/index.html
@@ -33,11 +33,11 @@
       </iframe>
     </section>
     <section id="sec-informacion">
-    <h1>Age of Empires II: Definitive Edition</h1>
-    <p>Age of Empires II: Definitive Edition celebra su aniversario número 20 de uno de los juegos más populares con unos increíbles gráficos 4k Ultra HD, una nueva banda sonora y mucho contenido extra. “The Last Khans” con 3 nuevas campañas y 3 nuevas civilizaciones.</p>
-    <p>Explorá todas las campañas originales como nunca antes así como también las expansiones más vendidas, con más de 200 horas de gameplay y 1.000 años de la historia de la humanidad. Juega online para desafiar a otros jugadores con 35 civilizaciones diferentes en tu aventura para la conquista mundial a través de las edades.</p>
-    <p>Elige tu camino de grandeza con esta remasterizacion definitiva de uno de los juegos de estrategia más amados de todos los tiempos.</p>
-    <p>Modo espectador y soporte nativo para streaming.</p>
+      <h1>Age of Empires II: Definitive Edition</h1>
+      <p>Age of Empires II: Definitive Edition celebra su aniversario número 20 de uno de los juegos más populares con unos increíbles gráficos 4k Ultra HD, una nueva banda sonora y mucho contenido extra. “The Last Khans” con 3 nuevas campañas y 3 nuevas civilizaciones.</p>
+      <p>Explorá todas las campañas originales como nunca antes así como también las expansiones más vendidas, con más de 200 horas de gameplay y 1.000 años de la historia de la humanidad. Juega online para desafiar a otros jugadores con 35 civilizaciones diferentes en tu aventura para la conquista mundial a través de las edades.</p>
+      <p>Elige tu camino de grandeza con esta remasterizacion definitiva de uno de los juegos de estrategia más amados de todos los tiempos.</p>
+      <p>Modo espectador y soporte nativo para streaming.</p>
     </section>
     <section id="sec-precios">
       <div class="div-precios">
@@ -57,7 +57,7 @@
       <form id="form" action="https://www.freecodecamp.org/email-submit">
         <label for="email" id="label-email">Para más información ingresá tu email:</label>
         <input type="email" name="email" id="email" placeholder="Ingresa tu email.">
-        <button type="submit" id="submit">Enviar</button>
+        <input type="submit" id="submit" value="Enviar">
       </form>
     </section>
   </main>
