--- a/PersonalPortfolioWebpage/index.html
+++ b/PersonalPortfolioWebpage/index.html
@@ -16,28 +16,35 @@
     </ul>
   </nav>
   <section id="welcome-section">
-    <h1>Bienvenido, soy Adrián Pacewicz</h1>
+    <h1>I am Adrián Pacewicz</h1>
+    <p>a web developer</p>
   </section>
   <section id="projects">
+    <div id="my-projects"><h2>These are some of my projects</h2></div>
     <div class="project-tile">
-      <a href="">Proyecto 1</a>
+      <a href="https://codepen.io/adrianpacewicz/full/xxqaxzp" target="_blank"><img src="https://i.imgur.com/V1QpA0G.png" alt="Technical Documentation Page Sreenshot"></a>
+      <a href="https://codepen.io/adrianpacewicz/full/xxqaxzp" target="_blank" class="link">Technical Documentation Page</a>
     </div>
     <div class="project-tile">
-      <a href="">Proyecto 2</a>
+      <a href="https://codepen.io/adrianpacewicz/full/GRWGdQr" target="_blank"><img src="https://imgur.com/cXkyIJT.png" alt="Producto Landing Page Sreenshot"></a>
+      <a href="https://codepen.io/adrianpacewicz/full/GRWGdQr" target="_blank" class="link">Product Landing Page</a>
     </div>
     <div class="project-tile">
-      <a href="">Proyecto 3</a>
+      <a href="https://codepen.io/adrianpacewicz/full/VwpXomK" target="_blank"><img src="https://imgur.com/FkIuw92.png" alt="Survey Form Sreenshot"></a>
+      <a href="https://codepen.io/adrianpacewicz/full/VwpXomK" target="_blank" class="link">Survey Form</a>
     </div>
     <div class="project-tile">
-      <a href="">Proyecto 4</a>
+      <a href="https://codepen.io/adrianpacewicz/full/ExWWKpw" target="_blank"><img src="https://imgur.com/VYZP3X5.png" alt="Tribute Page Sreenshot"></a>
+      <a href="https://codepen.io/adrianpacewicz/full/ExWWKpw" target="_blank" class="link">Tribute Page</a>
     </div>
   </section>
   <section id="contact">
-    <a id="profile-link" href="GITHUB" target="_blank">Github</a>
-    <a href="LINKEDIN" target="_blank">LinkedIn</a>
-    <a href="EMAIL" target="_blank">eMail</a>
-    <a href="TELEFONO" target="_blank">Cel</a>
-    <a href="INSTAGRAM" target="_blank">Instagram</a>
+    <h2>Let's work together...</h2>
+    <a id="profile-link" href="https://github.com/AdrianPacewicz" target="_blank"><i></i> <img src="https://imgur.com/1iGa0SK.png" alt="Github Logo">Github</a>
+    <a href="https://www.linkedin.com/in/adrian-pacewicz/" target="_blank"><img src="https://imgur.com/OQWbZMF.png" alt="LinkedIn Logo">LinkedIn</a>
+    <a href="mailto:adri.pacewicz@gmail.com"><img src="https://imgur.com/0YSxcGc.png" alt="Email Logo">eMail</a>
+    <a href="https://wa.me/5491164815597" target="_blank"><img src="https://imgur.com/e0jBXR3.png" alt="Whatsapp Logo">Whatsapp</a>
+    <a href="https://www.instagram.com/adripacewicz/" target="_blank"><img src="https://imgur.com/hKZuS8V.png" alt="Instagram Logo">Instagram</a>
   </section>
 </body>
 </html>
